feat(style): Added mixin to the continue button in order to modify the style.

--- a/paper-step.html
+++ b/paper-step.html
@@ -98,6 +98,7 @@ Missing Doc
         --paper-button: {
           background: var(--paper-vertical-step-continue-button-background, --primary-color);
           color: var(--paper-vertical-step-continue-button-color, --dark-theme-text-color);
+          @apply --paper-stepper-continue-button;
         };
       }
     </style>
